# rVJ

./: .env.example  .gitignore  .gitkeep  App.css  App.tsx  BUFFERING_FIXES_SUMMARY.md  Behavioral Protocols & Operational.txt  CHANGELOG_2026-01-21.md  DESKTOP-TODO.md  Header.tsx  IMPLEMENTATION_SUMMARY.md  MediaLibrary.tsx  PHASE7_IMPLEMENTATION.md  PROJECT-ROADMAP.md  ProjectDashboard.tsx  ProtectedRoute.tsx  README.md  Timeline.tsx  UserMenu.tsx  VideoPreview.tsx  VisualizerPanel.tsx  WAVESURFER_IMPLEMENTATION.md  WorkflowTutorial.tsx  backend_test.py  index.css  index.html  package-lock.json  package.json  panic.txt  supabase_projects_table.sql  tailwind.config.ts  test_result.md  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build_err.txt  build_log.txt  build_log_alt.txt  build_log_short.txt  cargo_errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/target_alt/: .rustc_info.json
src-tauri/target_alt/debug/.fingerprint/aho-corasick-d2c71f60fb04589f/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target_alt/debug/.fingerprint/alloc-no-stdlib-f66ef34dcd927803/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
src-tauri/target_alt/debug/.fingerprint/alloc-stdlib-5c3b2490231c1aca/: lib-alloc_stdlib  lib-alloc_stdlib.json
src-tauri/target_alt/debug/.fingerprint/anyhow-5f742c575df35aa8/: run-build-script-build-script-build
src-tauri/target_alt/debug/.fingerprint/anyhow-63f95685b41a900f/: lib-anyhow  lib-anyhow.json
(+348 files in other folders)
